----------------------------------
TICKET SERVER release notes
----------------------------------

todo
------

Backend
- TicketServiceImpl for Subscription apply Discount, instead of calculating it directly
- implement the Discount concept 

- use org.h2.jdbcx.JdbcConnectionPool instead of BoneCP
- better define SmNamingStrategy
- refine GlobalExceptionHandler
- merge PurchaseDao and PurchaseDaoCustom in one DAO, deriving PurchaseDao from PurchaseDaoCustom

Frontend 
- put the html in one only file (loading templates)
- use timepicker in listTickets.html

v0.2.0: minor improvement
--------------------------------
- added the total amount of sold tickets
- compiled with java 7

v0.1.0: first angularJS version
--------------------------------
- added buyerBirthDate
- complete info on subscription when writing the name of the buyer

Backend
- allow to download data in csv format


v0.0.1: before angularJS
-----------------------------
Backend:
- implemented progressiveNumber on Ticket (automatically calculated) and on Subscription
(automatically calculated if not set)
- il biglietto accompagnatore mettiamo 2 euro
- added the Purchase, Discount and (Revenue) concepts 
- managed Subscription.progressiveNumber
