@@ -7,6 +7,7 @@ import it.whitebox.event.business.domain.Subscription;
 import it.whitebox.event.business.result.CreatePurchaseResponse;
 import it.whitebox.event.business.result.CreateSubscriptionResponse;
 import it.whitebox.event.business.result.GetSubscriptionResponse;
+import it.whitebox.event.business.result.GetTicketsResponse;
 import it.whitebox.event.business.result.ListPurchaseResponse;
 import it.whitebox.event.business.result.ListSubscriptionResponse;
 
@@ -18,4 +19,5 @@ public interface TicketService {
 	public CreateSubscriptionResponse createSubscription(Subscription subscription);
 	public ListSubscriptionResponse listSubscriptions();
 	public GetSubscriptionResponse getSubscription(String subscriberFirstLastName);
+	public GetTicketsResponse getTickets(String buyerName);
 }
