@@ -70,9 +70,9 @@
 							<td>{{ticket.calculatedPrice}}</td>
 						</tr>
 						<tr>
-							<td>N. biglietti:</td><td>{{totalNumber}}</td><td></td><td></td>
-					        <td>Totale:</td>
-					        <td>{{ totalAmount }}</td>
+							<td><b>N. biglietti:</b></td><td><b>{{totalNumber}}</b></td><td></td><td></td>
+					        <td><b>Totale:</b></td>
+					        <td><b>{{ totalAmount }}</b></td>
 					    </tr>
 					</tbody>
 				</table>
